--- a/src/clean_out_co/pubspec.yaml
+++ b/src/clean_out_co/pubspec.yaml
@@ -69,6 +69,10 @@ flutter:
        - asset: fonts/Montserrat-SemiBold.ttf
          weight: 600
 
-
+   - family: Abhaya Libre
+     fonts:
+       - asset: fonts/AbhayaLibre-Regular.ttf
+       - asset: fonts/AbhayaLibre-ExtraBold.ttf
+         weight: 800
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
