--- a/src/clean_out_co/pubspec.yaml
+++ b/src/clean_out_co/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.17.4
   font_awesome_flutter: ^9.1.0
+  step_progress: ^0.0.1
 
 dev_dependencies:
   flutter_test:
