--- a/src/clean_out_co/pubspec.yaml
+++ b/src/clean_out_co/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg: ^0.17.4
   font_awesome_flutter: ^9.1.0
   step_progress: ^0.0.1
+  smooth_star_rating: ^1.1.1
 
 dev_dependencies:
   flutter_test:
